<resources>
    <string name="app_name">JAPRI</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_jasa">Jasa</string>
    <string name="title_account">Akun</string>

    <!--Splash Screen-->
    <string name="splash_logo_content">Logo Splash Screen</string>

    <!--Welcome Activity-->
    <string name="welcome_picture_content">Gambar Sambutan</string>
    <string name="welcome_title">Jasa Perhari</string>
    <string name="welcome_description">Temukan solusi dari masalah harianmu dengan cepat dan mudah menggunakan jasa profesional yang terpercaya!</string>

    <!--Text Button-->
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="finish">Selesai</string>
    <string name="cancel">Batal</string>
    <string name="edit">Ubah</string>
    <string name="save">Simpan</string>
    <string name="add_job">Tambah Pekerjaan</string>
    <string name="contact">Hubungi</string>
    <string name="use_service">Gunakan Jasa</string>
    <string name="text_ok">OK</string>
    <string name="text_yes">Ya</string>
    <string name="text_no">Tidak</string>

    <!--Common Text-->
    <string name="username">Username</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="phone_no">Nomor Telepon</string>
    <string name="user_photo">Foto User</string>
    <string name="skill">Keahlian</string>
    <string name="user_skill">Keahlian : %1$s</string>
    <string name="address">Alamat</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="user_description">Deskripsi Diri</string>
    <string name="rating">Penilaian</string>
    <string name="information">Informasi</string>

    <string name="empty_input">Isi terlebih dahulu</string>
    <string name="empty_text_view">Mohon diisi</string>
    <string name="no_spaces_allowed">Tidak boleh menggunakan spasi</string>
    <string name="not_enough_name_digit">Karakter minimal 2</string>
    <string name="contain_number">Tidak boleh memasukkan angka</string>
    <string name="wrong_phone_number_format">Perhatikan contoh format yang benar</string>
    <string name="not_enough_digit">Minimal 10 digit angka</string>

    <string name="error_message">Ada yang salah. Silahkan coba lagi</string>
    <string name="connection_failed">Terjadi kesalahan pada koneksi</string>

    <!--Gender-->
    <string name="gallery">Pilih dari Galeri</string>
    <string name="camera">Ambil dari Kamera</string>

    <!--User role-->
    <string name="service_provider">Penyedia Jasa</string>
    <string name="client">Pengguna Jasa</string>

    <!--Gender-->
    <string name="female">Perempuan</string>
    <string name="male">Laki-laki</string>

    <!--Register & Login Activity-->
    <string name="register_title">Daftar Akun Kamu</string>
    <string name="login_title">Masuk ke Akun Kamu</string>

    <string name="role_hint">Daftar sebagai</string>
    <string name="more_information">Informasi selengkapnya</string>

    <string name="email_invalid">Email tidak valid</string>

    <string name="text_have_account">Sudah memiliki akun?</string>
    <string name="text_not_have_account">Belum memiliki akun?</string>

    <string name="information_alert_title">Ingin daftar sebagai apa?</string>
    <string name="information_alert_content"><b>Penyedia jasa</b> adalah orang yang menawarkan atau memberikan suatu layanan atau keterampilan kepada orang lain.
    Sedangkan <b>pengguna jasa</b> adalah orang yang menggunakan atau memanfaatkan layanan yang disediakan oleh penyedia jasa
    </string>

    <string name="register_alert_title">Berhasil</string>
    <string name="register_alert">Akun kamu telah berhasil terdaftar! Masuk melalui akun?</string>

    <!--dashboard fragment-->
    <string name="dashboard_username">Hai, %1$s!</string>
    <string name="dashboard_picture_description">Gambar Utama Beranda</string>
    <string name="title_choose_job_field">Pilih bidang jasa</string>

    <!--jasa fragment-->
    <string name="searchBar_hint">Cari jasa yang kamu butuhkan</string>

    <!--account fragment-->
    <string name="account_service_provider">Akun penyedia jasa</string>
    <string name="account_client">Akun pengguna jasa</string>
    <string name="change_photo">Ubah Foto Profil</string>
    <string name="history_job">Pekerjaan Saya</string>
    <string name="history_service">Lowongan Saya</string>
    <string name="account_setting">Pengaturan Akun</string>
    <string name="about_application">Tentang Aplikasi Ini</string>

    <string name="logout_message">Apakah kamu yakin ingin keluar dari aplikasi?</string>

    <!--detail jasa activity-->
    <string name="title_toolbar_detail_jasa_activity">Detail Jasa</string>
    <string name="information_for_user">Hubungi terlebih dahulu sebelum menggunakan jasa</string>
    <string name="has_been_contacted_alert">Apakah kamu telah menghubungi pengguna dan sepakat terkait pekerjaan yang akan diselesaikan?</string>

    <!--Add job activity-->
    <string name="title_toolbar_add_job_activity">Tambah Pekerjaan</string>
    <string name="worker_name">Nama Pekerja</string>
    <string name="job_name">Pekerjaan</string>
    <string name="job_name_hint">Masukkan pekerjaan</string>
    <string name="start_date">Tanggal Mulai</string>
    <string name="btn_start_date_content">Pilih tanggal mulai kerja</string>
    <string name="btn_end_date_content">Pilih tanggal selesai kerja</string>
    <string name="end_date">Tanggal Selesai</string>
    <string name="start_time">Jam Mulai</string>
    <string name="end_time">Jam Selesai</string>
    <string name="btn_start_time_content">Pilih jam mulai kerja</string>
    <string name="btn_end_time_content">Pilih jam selesai kerja</string>
    <string name="salary">Gaji</string>
    <string name="salary_hint">Masukkan nominal gaji</string>
    <string name="job_address">Alamat Tempat Kerja</string>
    <string name="job_address_hint">Masukkan alamat tempat kerja</string>
    <string name="detail_job">Detail Pekerjaan</string>
    <string name="detail_job_hint">Masukkan detail pekerjaan</string>

    <!--Job item-->
    <string name="job_date_time">%1$s - %2$s</string>
    <string name="upload_date">Diunggah pada %1$s</string>

    <!--Job history activity-->
    <string name="title_toolbar_service_history_activity">Lowongan Saya</string>
    <string name="title_toolbar_job_history_activity">Pekerjaan Saya</string>
    <string name="tab_text_1">Proses</string>
    <string name="tab_text_2">Selesai</string>
    <string name="no_data">Tidak ada data</string>

    <!--Photo profile activity-->
    <string name="title_toolbar_photo_profile_activity">Foto Profil</string>
    <string name="select_photo">Pilih foto</string>
    <string name="capture_image">Ambil gambar</string>
    <string name="switch_camera">Ganti kamera</string>
    <string name="camera_failed">Gagal mengaktfikan kamera</string>
    <string name="image_failed">Gagal mengambil gambar</string>
    <string name="no_change_image">Tidak ada perubahan pada foto</string>
    <string name="permission_granted">Izin diberikan</string>
    <string name="permission_denied">Izin ditolak</string>

    <!--Detail job activity-->
    <string name="title_toolbar_detail_job_activity">Detail Pekerjaan</string>
    <string name="review">Ulasan</string>
    <string name="review_hint">Masukkan ulasan</string>
    <string name="empty_rating">Berikan bintangmu</string>

    <!--Account setting activity-->
    <string name="title_toolbar_account_setting_activity">Pengaturan Akun</string>
    <string name="name_hint">Masukkan nama</string>
    <string name="email_hint">Masukkan email</string>
    <string name="phone_no_hint">Masukkan nomor WhatsApp aktif</string>
    <string name="phone_no_example">*Contoh: 81234567890</string>
    <string name="gender_hint">Pilih jenis kelamin</string>
    <string name="address_hint">Masukkan alamat</string>
    <string name="skill_hint">Pilih keahlian pekerjaan</string>
    <string name="desc_hint">Masukkan deskripsi diri</string>
    <string name="edit_password">Ubah Password</string>
    <string name="password_hint">Masukkan password baru anda</string>

    <!--About application activity-->
    <string name="about_app_content">Melalui <b>JAPRI (JASA PERHARI)</b> kamu bisa:\n
        1. Mencari jasa terbaik yang kamu butuhkan untuk menyelesaikan masalah yang kamu miliki.\n
        2. Mendapatkan pekerjaan harian tambahan dengan memanfaatkan keahlian/skill yang kamu miliki.</string>

    <!--Job Fields-->
    <string name="service">Pelayanan</string>
    <string name="logistic">Logistik</string>
    <string name="selling">Penjualan</string>
    <string name="education">Pendidikan</string>
    <string name="media">Media</string>
    <string name="management">Manajemen</string>
    <string name="production">Produksi</string>
    <!--    <string name="technician">Teknisi</string>-->
    <string name="carpentry">Pertukangan</string>
    <string name="administrative">Administratif</string>
    <string name="fishery">Perikanan</string>
    <string name="agriculture">Pertanian</string>
    <string name="farming">Perkebunan</string>
    <string name="creative">Kreatif</string>

    <!--Lists of Job-->
    <string name="question_skill">Apa pekerjaan keahlian kamu?</string>
    <string name="technician">teknisi</string>
    <string name="bellman">bellman</string>
    <string name="craftsmen">pengrajin</string>
    <string name="waiter">waiter</string>
    <string name="nurse">perawat</string>
    <string name="cashier">kasir</string>
    <string name="coolie">kuli</string>
    <string name="soundMan">soundman</string>
    <string name="gardener">penanam</string>
    <string name="host">host</string>
    <string name="sorter">sorter</string>
    <string name="checker">checker</string>
    <string name="guard">penjaga</string>
    <string name="librarian">pustakawan</string>
    <string name="co_host">co-Host</string>
    <string name="navigator">navigator</string>
    <string name="Photographer">fotografer</string>
    <string name="servant">pelayan</string>
    <string name="receptionist">pengantar</string>
    <string name="dishwasher">dishwasher</string>
    <string name="helper">helper</string>
    <string name="packager">pemaket</string>
    <string name="assistant">asisten</string>
    <string name="driver">sopir</string>
    <string name="videographer">videographer</string>
    <string name="nanny">pengasuh</string>
    <string name="freelance">freelance</string>
    <string name="content">content</string>
    <string name="pickers">pemetik</string>
    <string name="courier">kurir</string>
    <string name="handyman">tukang</string>
    <string name="laborer">buruh</string>
    <string name="teacher">pengajar</string>
    <string name="writer">penulis</string>
    <string name="maid">pembantu</string>
    <string name="conductor">kenek</string>
    <string name="tailor">penjahit</string>

</resources>

<!--<string name="pemuat">pemuat</string>-->

