<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".ui.detailjasa.DetailJasaActivity">

    <TextView
        android:id="@+id/information"
        style="@style/sub_title_orange"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/information_for_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/information"
        app:layout_constraintStart_toStartOf="@id/information"
        android:src="@drawable/user_photo"
        android:contentDescription="@string/user_photo"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/user_photo"
        app:layout_constraintTop_toTopOf="@+id/user_photo"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/text_body"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

    <TextView
        android:id="@+id/text_rating"
        style="@style/sub_title"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_photo"
        android:layout_marginTop="12dp"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:theme="@style/RatingBar"
        android:stepSize="1"
        android:numStars="5"
        android:rating="0"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/text_rating"
        app:layout_constraintTop_toTopOf="@+id/text_rating"
        app:layout_constraintBottom_toBottomOf="@+id/text_rating"/>

    <TextView
        android:id="@+id/text_information"
        style="@style/sub_title"
        android:text="@string/information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        style="@style/text_with_icon"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/text_information"
        app:layout_constraintTop_toBottomOf="@+id/text_information"
        android:layout_marginTop="4dp"
        android:justificationMode="inter_word"
        app:drawableStartCompat="@drawable/ic_outline_location"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        style="@style/text_with_icon"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        android:layout_marginTop="4dp"
        app:drawableStartCompat="@drawable/ic_outline_email" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        style="@style/text_with_icon"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginTop="4dp"
        app:drawableStartCompat="@drawable/ic_outline_person" />

    <TextView
        android:id="@+id/text_skill"
        style="@style/sub_title"
        android:text="@string/skill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_user_skill"
        style="@style/sub_title_orange"
        android:layout_marginTop="4dp"
        android:text="@string/skill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_skill" />

    <TextView
        android:id="@+id/text_description"
        style="@style/sub_title"
        android:text="@string/user_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_skill"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_user_description"
        style="@style/text_body"
        android:text="@string/user_description"
        app:layout_constraintStart_toStartOf="@+id/text_description"
        app:layout_constraintTop_toBottomOf="@+id/text_description"
        android:layout_marginTop="4dp"
        android:justificationMode="inter_word"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/contact"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_use_service"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btn_use_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/orange"
        android:padding="12dp"
        android:text="@string/use_service"
        app:layout_constraintBottom_toBottomOf="@+id/btn_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_contact"
        app:layout_constraintTop_toTopOf="@+id/btn_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>