<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_color="@color/blue"
            android:src="@drawable/user_photo"
            android:contentDescription="@string/user_photo"/>

        <TextView
            android:id="@+id/tv_username"
            style="@style/sub_title_orange"
            android:text="@string/username"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:maxLength="30"
            app:layout_constraintStart_toEndOf="@+id/user_photo"
            app:layout_constraintTop_toTopOf="@+id/user_photo"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/text_body"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/RatingBar"
            android:stepSize="1"
            android:numStars="5"
            android:rating="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_username"/>

        <TextView
            android:id="@+id/tv_user_description"
            style="@style/text_body"
            android:text="@string/user_description"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_photo"
            android:justificationMode="inter_word"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_user_skill"
            style="@style/text_body"
            android:text="@string/user_skill"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>